frontend/core/src/main/webapp/static/less/em.less
body {
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  font-weight: 300;
  width: 100%;
  height: 100%;
  font-size: 25px;
}

h1, h2, h3, h4 {
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  font-weight: 300;
}

h1 {
  font-size: 45px;
}
h2 {
  font-size: 30px;
}
h3 {
  font-size: 35px;
}
h4 {
  font-size: 25px;
}

html {
  width: 100%;
  height: 100%;
}

.container {
  position: relative;
  width: 100%;
  height: 100%;
}

.row-fluid {
  width: 100%;
  height: 100%;
}
.em-page {
  width: 100%;
  height: 100%;
}
.em-animate {
  width: 100%;
  height: 100%;
}

.nav, .pagination, .carousel a { cursor: pointer; }

.boxsizingBorder {
  width: 100%;
  height: 100% !important;
}

.inlineblock {
  display: inline-block;
}

label {
  font-weight: normal;
}

.accordion-group {
  border: 0 none;
}

button.addNew {
  border: none;
  background-color: white;
}

button.addNew:hover {
  background-color: #D3D3D3;
}

.formContent {
  border-color: gray;
  border-style: solid;
  border-width: 1px;
  padding: 3px;
}

.formContent:hover {
  border-color: black;
}

button.editItem {
  border-color: #D3D3D3;
  border-style: solid;
  border-width: 1px;
}

button.editItem:hover {
  border-color: gray;
}

button.formAction {
  border-color: #D3D3D3;
  border-style: solid;
  border-width: 1px;
}

button.formAction:enabled:hover {
  border-color: gray;
}

button.toggle {
  border: none;
  background: none;
  color: gray;
}

button.toggle:hover {
  border: none;
  background: none;
  text-decoration: underline;
}

.em-front {
  text-align: center;
}

.em-note, .em-core {
  padding-top: 80px;
}

ul.em-headers {
  list-style-image: none;
  list-style-type: none;
  margin-left: 0;
}

ul {
  list-style-type: none;
}

.em-anchor {
  padding-top: 30px;
}

.done-true {
  text-decoration: line-through;
  color: gray;
}

.fade-hide, .fade-show {
  -webkit-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s;
  -moz-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s;
  -o-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s;
  transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s;
}

.fade-hide {
  opacity: 1;
}

.fade-hide.fade-hide-active {
  opacity: 0;
}

.fade-show {
  opacity: 0;
}

.fade-show.fade-show-active {
  opacity: 1;
}

